@@ -1,3 +1,11 @@
+2006-01-10 Paul Jakma <paul.jakma@sun.com>
+
+	* ospfd.c: (ospf_network_run) checking to see if router-id
+	  is set should be on ospf->router_id, not router_id_static.
+	  This was causing ospfd to not start if router-id had not
+	  been configured statically.
+	  (ospf_if_update) ditto.
+
 2005-11-26 Paul Jakma <paul.jakma@sun.com>
 
 	* ospf_api.c: (struct opaque_lsa) change from gcc zero-length
